# anamnesis

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
analysis/: clustering.py  deep_dive.py  distance_matrices.py  feature_importance.py  noise_floor.py  positional_decomp.py  retrieval_test.py
extraction/: generation_runner.py  model_loader.py  state_extractor.py
latex/: cite_mapping.txt  content.tex  main.tex  process_body.py  references.bib
outputs/phase05/semantic_disambiguation/: followup_partial.json  followup_results.json  semantic_disambiguation.json  semantic_disambiguation_partial.json
outputs/phase05/temporal_prediction/: focused_partial.json  null_deltas_T1.npy  null_deltas_T2.5.npy  null_deltas_T3.npy  (+1 more)
prompts/: prompt_sets.json
review_pack/: features.npz  samples.parquet  surface_baseline.json
scripts/: build_pdf.sh  build_review_pack.py  generate_paper_figures.py  reproduce_all.sh  run_4way_analysis.py  run_4way_no_analogical.py  run_4way_topic_heldout.py  run_all.sh  run_analysis.py  run_calibration.py  run_capacity_sweep.py  run_contrastive_followup.py  run_contrastive_projection.py  run_contrastive_run3.py  run_cross_run_transfer.py  run_cv_stability.py  run_experiment.py  run_judge_scoring.py  run_permutation_test.py  run_reviewer_checks.py  run_semantic_disambiguation.py  run_semantic_disambiguation_followup.py  run_supplementary_analysis.py  run_supplementary_gens.py  run_temporal_prediction.py  run_temporal_prediction_focused.py  run_temporal_t3_continuation.py  run_tier_ablation.py  smoke_test.py
(+943 files in other folders)
