[project]
name = "anamnesis"
version = "0.1.0"
description = "Computational State Signatures: Phase 0 Validation Experiment"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.27",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "sentence-transformers>=2.5",
    "pandas>=2.2",
    "tqdm>=4.66",
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extraction", "analysis", "scripts"]
